--- a/src/crit.tex
+++ b/src/crit.tex
@@ -1,14 +1,4 @@
 \section*{Critères d'évaluations}
 % Targeted competences and table for grading can be set here. For example:
 
-\begin{tabular}{|l|l|}
-\hline
-Competence & Result \\
-\hline
-Algebra & \\
-Geometry & \\
-Trigonometry & \\
-\hline
-\end{tabular}
-
-
+test
