slight changed to Build with TexMaker

--- a/src/main.tex
+++ b/src/main.tex
@@ -64,19 +64,19 @@
     {\LARGE \textbf{\doctitle} \\[1em]}
     {\large \docsubtitle}
 \end{center}
-\input{src/crit.tex}
+\input{crit.tex}
 \newpage
 
 \newgeometry{headheight=12pt} % Reset the headheight for other pages
 \thispagestyle{otherpages}
 \section{Première partie}
 
-\input{src/questions/q1.tex}
-\input{src/questions/q2.tex}
+\input{questions/q1.tex}
+\input{questions/q2.tex}
 % ... add more questions as needed
 
 \section{Deuxème partie}
-\input{src/questions/q3.tex}
+\input{questions/q3.tex}
 % ... add more answers as needed
 
 \end{document}
