add template style package, cleanup header and crit table

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -1,4 +1,34 @@
 \section*{Critères d'évaluations}
 % Targeted competences and table for grading can be set here. For example:
 
-test
+
+% The table is set to be as wide as the text on the page (\textwidth).
+% The first column is set to be 0.75 (or 3/4) of the width of the table,
+% while the X column will take up the remaining space.
+ 
+\begin{tabularx}{\textwidth}{|p{0.75\textwidth}|X|}
+\hline
+\large Couleur générale & \\
+\hline
+\textbf{C1: Connaître}
+\begin{itemize}
+    \item Objectif 1
+    \item Objectif 2
+    \item ...
+\end{itemize} & \\
+\hline
+\textbf{C2: Appliquer}
+\begin{itemize}
+    \item Objectif 1
+    \item Objectif 2
+    \item ...
+\end{itemize} & \\
+\hline
+\textbf{C3: Transférer}
+\begin{itemize}
+    \item Objectif 1
+    \item Objectif 2
+    \item ...
+\end{itemize} & \\
+\hline
+\end{tabularx}
