--- a/src/main.tex
+++ b/src/main.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt, a4paper]{article}
+\documentclass[14pt, a4paper]{extarticle}
 \usepackage{evaltemplate}
 
 % Define your document title and subtitle
@@ -23,6 +23,7 @@
 \input{questions/q2.tex}
 % ... add more questions as needed
 
+\newpage
 \section{Deuxème partie}
 \input{questions/q3.tex}
 % ... add more answers as needed
