use helvet font until I figure out how to install Arial for latex on linux

--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -4,6 +4,12 @@
 
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[T1]{fontenc}
+% \usepackage{arial}                           % load package which provides the font
+% \renewcommand{\sfdefault}{ua1}               % set default serif font as Arial
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}    % set the default font as serif, i.e., Arial
+
+
 \RequirePackage{graphicx}
 \RequirePackage{enumitem}
 \RequirePackage{xcolor}
