add some comment about fonts

--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -4,6 +4,8 @@
 
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[T1]{fontenc}
+
+%% remove following lines to use default latex font
 % \usepackage{arial}                           % load package which provides the font
 % \renewcommand{\sfdefault}{ua1}               % set default serif font as Arial
 \usepackage{helvet}
