[enh] couleur par question

--- a/src/main.tex
+++ b/src/main.tex
@@ -1,9 +1,9 @@
-\documentclass[14pt, a4paper]{extarticle}
+\documentclass[12pt, a4paper]{extarticle}
 \usepackage{evaltemplate}
 
 % Define your document title and subtitle
-\newcommand{\doctitle}{Écaluation certificative n°2}
-\newcommand{\docsubtitle}{Chapitre 2 - Les propriétés des puissances}
+\newcommand{\doctitle}{Évaluation journal de bord n$^{\circ}$2}
+\newcommand{\docsubtitle}{Chapitre X - Titre du chapitre}
 \newcommand{\course}{Mathématiques}
 
 \begin{document}
@@ -13,6 +13,7 @@
 
 % Display the title and subtitle
 \titlebox{\doctitle}{\docsubtitle}
+
 
 \noindent\hrule
 \input{crit.tex}
