--- a/src/crit.tex
+++ b/src/crit.tex
@@ -1,52 +1,90 @@
-\section*{Critères d'évaluations}
-% Targeted competences and table for grading can be set here. For example:
+
+\newcounter{qcntvalue}
+\setcounter{qcntvalue}{5}
+
+% Generate the table header and the empty answer row
+\newcommand{\tableheader}{}
+\newcommand{\answerrow}{}
+\foreach \n in {1,...,\value{qcntvalue}}{
+		\ifnum\n=\value{qcntvalue}
+			\xdef\tableheader{\tableheader Q\n} % No '&' for the last item
+			\xdef\answerrow{\answerrow\strut} % No '&' for the last item in the answer row
+		\else
+			\xdef\tableheader{\tableheader Q\n &} % '&' for items except for the last
+			\xdef\answerrow{\answerrow & \strut} % '&' for items except for the last in the answer row
+		\fi
+	}
+\newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 
 
-% The table is set to be as wide as the text on the page (\textwidth).
-% The first column is set to be 0.75 (or 3/4) of the width of the table,
-% while the X column will take up the remaining space.
- 
-{ \small
-\begin{spacing}{1.2}
-	\begin{tabularx}{\textwidth}{|X|}
-		\hline
-		\large Couleur générale \\
-		\hline
-		\textbf{C1: Connaître}
-		\begin{itemize}
-		    \item Objectif 1
-		    \item Objectif 2
-		    % \item ...
-		\end{itemize} \\
-		\hline
-		\textbf{C2: Appliquer}
-		\begin{itemize}
-		    \item Objectif 1
-		    \item Objectif 2
-		    % \item ...
-		\end{itemize} \\
-		\hline
-		\textbf{C3: Transférer}
-		\begin{itemize}
-		    \item Objectif 1
-		    \item Objectif 2
-		    % \item ...
-		\end{itemize} \\
-		\hline
-		    \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
-		        \strut
-		        \textbf{Note finale}
-		        \vspace{1.2cm}
-		        \strut 
-		     } \\
-		\hline
-		    \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
-		        \strut
-		        \textbf{Remarques}
-		        \vspace{1.5cm}
-		        \strut
-		 } \\
-		\hline
-	\end{tabularx}
-\end{spacing}
-}
+\section*{}
+ % Targeted competences and table for grading can be set here. For example:
+ { \small
+  \begin{spacing}{1.2}
+	  \begin{tabularx}{\textwidth}{|X|}
+		  \hline
+		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
+			  \strut
+			  \textbf{Note finale}
+			  \vspace{1.2cm}
+			  \strut
+		  } \\
+		  \hline
+		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
+			  \strut
+			  \textbf{Couleur par question}
+			  % \vspace{1.2cm}
+			  \begin{center}
+				  \renewcommand{\arraystretch}{2}
+				  \begin{tabular}{| *{\value{qcntvalue}}{C{1.5cm}|} }
+					  \hline
+					  \tableheader \\ % Use the header constructed above
+					  \hline
+					  % \rule{0pt}{6ex}\answerrow \\ % Use the answer row constructed above
+					  % \hline
+				  \end{tabular}
+			  \end{center}
+		  } \\
+		  \hline
+		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
+			  \strut
+			  \textbf{Remarques}
+			  \vspace{1.2cm}
+			  \strut
+		  } \\
+		  \hline
+	  \end{tabularx}
+  \end{spacing}
+ }
+
+\section*{Compétences}
+ % Targeted competences and table for grading can be set here. For example:
+ { \small
+  \begin{spacing}{1.2}
+	  \begin{tabularx}{\textwidth}{|X|}
+		  \hline
+		  \textbf{C1: Connaître}
+		  \begin{itemize}
+			  \item Objectif 1
+			  \item Objectif 2
+			        % \item ...
+		  \end{itemize} \\
+		  \hline
+		  \textbf{C2: Appliquer}
+		  \begin{itemize}
+			  \item Objectif 1
+			  \item Objectif 2
+			        % \item ...
+		  \end{itemize} \\
+		  \hline
+		  \textbf{C3: Transférer}
+		  \begin{itemize}
+			  \item Objectif 1
+			  \item Objectif 2
+			        % \item ...
+		  \end{itemize} \\
+		  \hline
+	  \end{tabularx}
+  \end{spacing}
+ }
+
