--- a/src/main.tex
+++ b/src/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt, a4paper]{extarticle}
-\usepackage{evaltemplate}
+\usepackage{src/evaltemplate}
 
 % Define your document title and subtitle
 \newcommand{\doctitle}{Évaluation journal de bord n$^{\circ}$2}
@@ -16,18 +16,17 @@
 
 
 \noindent\hrule
-\input{crit.tex}
+\input{src/crit.tex}
 \newpage
 
 \section{Première partie}
-\input{questions/q1.tex}
-\input{questions/q2.tex}
+\input{src/questions/q1.tex}
+\input{src/questions/q2.tex}
 % ... add more questions as needed
 
 \newpage
 \section{Deuxème partie}
-\input{questions/q3.tex}
+\input{src/questions/q3.tex}
 % ... add more answers as needed
 
 \end{document}
-
