[add] modif from math2_eval6

--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -34,6 +34,10 @@
 \RequirePackage{fancyvrb} % for "\Verb" macro
 \RequirePackage{hhline}
 \RequirePackage{ifthen}
+\RequirePackage{tikz}
+\RequirePackage{xparse} % Pour les commandes avancées
+
+
 
 \newlength{\mylength}
 \newcommand{\fillin}{%
