[enh] simplify objectives + [fix] build dir creation

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -57,31 +57,20 @@
   \end{spacing}
  }
 
-\section*{Compétences}
+\section*{Objectifs}
  % Targeted competences and table for grading can be set here. For example:
  { \small
   \begin{spacing}{1.2}
 	  \begin{tabularx}{\textwidth}{|X|}
 		  \hline
-		  \textbf{C1: Connaître}
+		  \textbf{Je suis capable de...}
 		  \begin{itemize}
-			  \item Objectif 1
-			  \item Objectif 2
-			        % \item ...
-		  \end{itemize} \\
-		  \hline
-		  \textbf{C2: Appliquer}
-		  \begin{itemize}
-			  \item Objectif 1
-			  \item Objectif 2
-			        % \item ...
-		  \end{itemize} \\
-		  \hline
-		  \textbf{C3: Transférer}
-		  \begin{itemize}
-			  \item Objectif 1
-			  \item Objectif 2
-			        % \item ...
+			  \item Item 1
+			        \begin{itemize}[label={}]
+				        \item sub item 1
+				        \item sub item 2
+			        \end{itemize}
+			  \item Item 2
 		  \end{itemize} \\
 		  \hline
 	  \end{tabularx}
