[add] small template update

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -25,7 +25,7 @@
 		  \hline
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
-			  \textbf{Note finale}
+			  \textbf{Couleur globale}
 			  \vspace{1.2cm}
 			  \strut
 		  } \\
@@ -49,6 +49,7 @@
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
 			  \textbf{Remarques}
+		  \\\versions{}{}{}{Version EABS.}
 			  \vspace{1.2cm}
 			  \strut
 		  } \\
