--- a/src/main.tex
+++ b/src/main.tex
@@ -14,7 +14,7 @@
 % Display the title and subtitle
 \titlebox{\doctitle}{\docsubtitle}
 
-
+\boldmath
 \noindent\hrule
 \input{src/crit.tex}
 \newpage
