--- a/src/crit.tex
+++ b/src/crit.tex
@@ -49,7 +49,7 @@
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
 			  \textbf{Remarques}
-		  \\\versions{}{}{}{Version EABS.}
+		  \\\versions{}{}{}{Version EABS}
 			  \vspace{1.2cm}
 			  \strut
 		  } \\
