[add] echelle de couleurs

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -26,8 +26,18 @@
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
 			  \textbf{Couleur globale}
-			  \vspace{1.2cm}
-			  \strut
+
+			  \begin{center}
+				  \renewcommand{\arraystretch}{1.5}
+				  \begin{tabular}{| *{12}{C{0.8cm}|} }
+					  \hline
+					  R1 & R2 & R3 & O1 & O2 & O3 & V1 & V2 & V3 & B1 & B2 & B3 \\
+					  \hline
+					  % \rule{0pt}{6ex}\answerrow \\ % Use the answer row constructed above
+					  % \hline
+				  \end{tabular}
+			  \end{center}
+
 		  } \\
 		  \hline
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
