[add] grille de correction

--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -40,6 +40,7 @@
 \RequirePackage{ifthen}
 \RequirePackage{pgf}
 \RequirePackage{ulem}
+\RequirePackage{pifont}
 
 
 % set default enum to alpha
@@ -126,7 +127,7 @@
 }
 
 \newcommand{\hdr}[1][src/images/logo.jpg]{%
-	\renewcommand{\arraystretch}{2}
+	\renewcommand{\arraystretch}{1.5}
 	\begin{tabular}[t]{
 		@{}m{0.33\textwidth}
 		@{}>{\raggedleft}p{0.13\textwidth}
