Update template with auto eval

--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -39,6 +39,8 @@
 \RequirePackage{xparse} % Pour les commandes avancées
 \RequirePackage{ifthen}
 \RequirePackage{pgf}
+\RequirePackage{ulem}
+\RequirePackage{pifont}
 
 
 % set default enum to alpha
@@ -85,6 +87,7 @@
 
 % \newcommand{\answerblank}[1]{\ifdefined\withanswers\else\vspace{#1}\fi}
 \newcommand{\answerblank}[1]{\ifdefined\withanswers\else\vspace{#1}\fi}
+\newcommand{\corrblock}[1]{\color{red}{#1}}
 \newcommand{\corr}[1]{\textcolor{red}{#1}}
 \newcommand{\corrbf}[1]{\textcolor{red}{\textbf{#1}}}
 \newcommand{\ifnotcorr}[1]{
@@ -124,7 +127,7 @@
 }
 
 \newcommand{\hdr}[1][src/images/logo.jpg]{%
-	\renewcommand{\arraystretch}{2}
+	\renewcommand{\arraystretch}{1.5}
 	\begin{tabular}[t]{
 		@{}m{0.33\textwidth}
 		@{}>{\raggedleft}p{0.13\textwidth}
@@ -165,4 +168,8 @@
 			\ifthenelse{\equal{\version}{C}}{#3}{%
 				\ifthenelse{\equal{\version}{D}}{#4}{%
 					Error: Undefined version!}}}}%
+}
+
+\newcommand{\ifeabs}[2]{
+	\ifthenelse{\equal{\version}{D}}{#1}{#2}
 }
