work in progress

--- a/src/main.tex
+++ b/src/main.tex
@@ -11,6 +11,7 @@
 \boldmath
 % Display header with logo, name, classe, etc
 \ifnotcorr{
+	\thispagestyle{firstpage}
 	\hdr
 	% Display the title and subtitle
 	\titlebox{\doctitle}{\docsubtitle}
