[add] auto evaluation

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -56,9 +56,9 @@
 		  \hline
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
-			  \textbf{Remarques}
-		  \\\versions{}{}{}{Version EABS.}
-			  \vspace{1.2cm}
+			  \textbf{Remarques : }
+			  \versions{}{}{}{Version EABS.}
+			  \vspace{0.5cm}
 			  \strut
 		  } \\
 		  \hline
@@ -66,31 +66,68 @@
   \end{spacing}
  }
 
-\subsection*{Objectifs}
-% Targeted competences and table for grading can be set here. For example:
-{ \small
-	\begin{spacing}{1.5}
-		\begin{tabularx}{\textwidth}{|X| *{2}{c|}}
-			\hline
-			% \textbf{Je suis capable de...}                                                                      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} \\
-			\textbf{Je suis capable de...}                                                                      &           &           \\
-			\hline
-			Effectuer des divisions Euclidienne par calcul écrit.                                               & \ding{51} & \ding{55} \\
-			\hline
-			Formuler et utiliser dans différents contextes la relation fondamentale de la division Euclidienne. & \ding{51} & \ding{55} \\
-			\hline
-			Reconnaitre des nombres premiers entre eux.                                                         & \ding{51} & \ding{55} \\
-			\hline
-			Déterminer l’ensemble des diviseurs et des multiples d’un nombre.                                   & \ding{51} & \ding{55} \\
-			\hline
-			Déterminer les diviseurs communs et le PGCD de deux nombres ou plus.                                & \ding{51} & \ding{55} \\
-			\hline
-			Déterminer les multiples communs et le PPCM de deux nombres ou plus.                                & \ding{51} & \ding{55} \\
-			\hline
-			Résoudre des problèmes relatifs au PGCD ou PPCM.                                                    & \ding{51} & \ding{55} \\
-			\hline
-		\end{tabularx}
 
-	\end{spacing}
-}
+ { \small
+  \subsection*{Objectifs}
+  % Targeted competences and table for grading can be set here. For example:
+  \begin{spacing}{1.5}
+	  % \begin{tabularx}{\textwidth}{|X|}
+	  %  \hline
+	  % -		  \textbf{Je suis capable de...}
+	  % -		  \begin{itemize}
+	  % -			  \item Item 1
+	  % -			        \begin{itemize}[label={}]
+	  % -				        \item sub item 1
+	  % -				        \item sub item 2
+	  % -			        \end{itemize}
+	  % -			  \item Item 2
+	  % -		  \end{itemize} \\
+	  %  \hline
+	  % \end{tabularx}
 
+	  % \noindent
+	  % \begin{tabularx}{\textwidth}{|X*{5}{c}|}
+	  %  \hline
+	  %  % \textbf{Je suis capable de...}                                                                      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} \\
+	  %  \textbf{Je suis capable de...}                                                                      &            &            &            &            &            \\
+	  %  \hline
+	  %  Effectuer des divisions Euclidienne par calcul écrit.                                               & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Formuler et utiliser dans différents contextes la relation fondamentale de la division Euclidienne. & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Reconnaitre des nombres premiers entre eux.                                                         & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Déterminer l’ensemble des diviseurs et des multiples d’un nombre.                                   & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Déterminer les diviseurs communs et le PGCD de deux nombres ou plus.                                & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Déterminer les multiples communs et le PPCM de deux nombres ou plus.                                & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  %  Résoudre des problèmes relatifs au PGCD ou PPCM.                                                    & \ding{109} & \ding{109} & \ding{109} & \ding{109} & \ding{109} \\
+	  %  \hline
+	  % \end{tabularx}
+
+	  \noindent
+	  \begin{tabularx}{\textwidth}{|X| *{2}{c|}}
+		  \hline
+		  % \textbf{Je suis capable de...}                                                                      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} \\
+		  \textbf{Je suis capable de...}                                                                      &           &           \\
+		  \hline
+		  Effectuer des divisions Euclidienne par calcul écrit.                                               & \ding{51} & \ding{55} \\
+		  \hline
+		  Formuler et utiliser dans différents contextes la relation fondamentale de la division Euclidienne. & \ding{51} & \ding{55} \\
+		  \hline
+		  Reconnaitre des nombres premiers entre eux.                                                         & \ding{51} & \ding{55} \\
+		  \hline
+		  Déterminer l’ensemble des diviseurs et des multiples d’un nombre.                                   & \ding{51} & \ding{55} \\
+		  \hline
+		  Déterminer les diviseurs communs et le PGCD de deux nombres ou plus.                                & \ding{51} & \ding{55} \\
+		  \hline
+		  Déterminer les multiples communs et le PPCM de deux nombres ou plus.                                & \ding{51} & \ding{55} \\
+		  \hline
+		  Résoudre des problèmes relatifs au PGCD ou PPCM.                                                    & \ding{51} & \ding{55} \\
+		  \hline
+	  \end{tabularx}
+
+  \end{spacing}
+ }
