[enh] update layout and geometry

--- a/src/crit.tex
+++ b/src/crit.tex
@@ -41,22 +41,6 @@
 		  \hline
 		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
 			  \strut
-			  \textbf{Auto-évaluation}
-			  \begin{center}
-				  \renewcommand{\arraystretch}{1.3}
-				  \begin{tabular}{| *{12}{C{0.8cm}|} }
-					  \hline
-					  R1 & R2 & R3 & O1 & O2 & O3 & V1 & V2 & V3 & B1 & B2 & B3 \\
-					  \hline
-					  % \rule{0pt}{6ex}\answerrow \\ % Use the answer row constructed above
-					  % \hline
-				  \end{tabular}
-			  \end{center}
-
-		  } \\
-		  \hline
-		  \parbox{\dimexpr\textwidth-2\tabcolsep\relax}{
-			  \strut
 			  \textbf{Couleur par question}
 			  % \vspace{1.2cm}
 			  \begin{center}
@@ -75,7 +59,7 @@
 			  \strut
 			  \textbf{Remarques : }
 			  \versions{}{}{}{Version EABS}
-			  % \vspace{0.5cm}
+			  \vspace{0.5cm}
 			  \strut
 		  } \\
 		  \hline
