--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -75,10 +75,10 @@
 % \fancyhead[L]{\course} % Empty header
 \fancyhead[L]{Nom : } % Empty header
 % \fancyhead[C]{\doctitle} % Empty header
-\fancyhead[R]{\doctitle - \release\version}
+\fancyhead[R]{\doctitle\  -- \release\version}
 
 \fancyfoot[R]{Page \thepage\ sur \pageref{LastPage}}
-\fancyfoot[L]{\course - \docsubtitle}
+\fancyfoot[L]{\course\ : \docsubtitle}
 
 \ifdefined\withanswers
 	\fancyfoot[C]{\color{red}\textbf{CORRECTIF}}
